--- a/ToDo.html
+++ b/ToDo.html
@@ -6,12 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ToDo vue.js</title>
     <link rel="stylesheet" href="https://ez-css.now.sh">
+    <style>
+    .done{
+             text-decoration: line-through;
+    }
+    </style>
 </head>
 <body>
     <main id="app">
-
+        <form @submit.prevent="addTodo">
+            <label for="newTodo">New Todo</label>
+            <input v-model="newTodo" type="text" name="newTodo" id="newTodo">
+            <button type="submit" name="button">Add</button>
+        </form>
+        <ul>
+            <li v-for="todo in todos">
+                <input type="checkbox" v-model="todo.done">
+               <span :class="{ done: todo.done}">{{todo.title}}</span>
+               <button @click="removeTodo(todo)" type="button" name="button">Remove</button>
+            </li>
+        </ul>
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-    <script src="todo.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="todo.js"  charset="utf-8"></script>
 </body>
 </html>
